k8s/pcloud-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pcloud-proxy
  namespace: conjur
  labels:
    app: pcloud-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pcloud-proxy
  template:
    metadata:
      labels:
        app: pcloud-proxy
    spec:
      imagePullSecrets:
        - name: dockerhub-pull
      containers:
        - name: pcloud-proxy
          image: aslancarlos/pcloud-proxy:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "20m"
            limits:
              memory: "64Mi"
              cpu: "100m"
          readinessProbe:
            httpGet:
              path: /api/pcloud/healthz
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/pcloud/healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
