k8s/pcloud-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pcloud-proxy
  namespace: conjur
  labels:
    app: pcloud-proxy
spec:
  selector:
    app: pcloud-proxy
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
